<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="Day">D</string>
    <string name="Month">M</string>
    <string name="Year">Y</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_back">Back</string>
    <string name="action_close">Close</string>
    <string name="activity">Activity</string>
    <string name="activity_empty_text">No activity yet</string>
    <string name="add_button_description">Add</string>
    <string name="add_media">Add media</string>
    <string name="addon_credits">Add-on Credits</string>
    <string name="agentweb_camera">Camera</string>
    <string name="agentweb_cancel">Cancel</string>
    <string name="agentweb_click_open">Tap to continue</string>
    <string name="agentweb_coming_soon_download">Coming soon to download the file</string>
    <string name="agentweb_current_downloaded_length">downloaded:%s</string>
    <string name="agentweb_current_downloading_progress">Downloading:%s</string>
    <string name="agentweb_default_page_error">error~</string>
    <string name="agentweb_download">Download</string>
    <string name="agentweb_download_fail">Download failed!</string>
    <string name="agentweb_download_task_has_been_exist">The task already exists, do not repeat click to download!</string>
    <string name="agentweb_file_chooser">Files</string>
    <string name="agentweb_file_download">Download</string>
    <string name="agentweb_honeycomblow">Wi-Fi disconnected. Continue the download via mobile data network?</string>
    <string name="agentweb_leave">Go away</string>
    <string name="agentweb_leave_app_and_go_other_page">leaving %s and opening another app?</string>
    <string name="agentweb_loading">Loading ...</string>
    <string name="agentweb_max_file_length_limit">The selected file can not be larger than %s MB</string>
    <string name="agentweb_tips">Note</string>
    <string name="agentweb_trickter">You have a new notice</string>
    <string name="album_name_all">All Media</string>
    <string name="and_text">and</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Aippy</string>
    <string name="app_name_s">aippy</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arrow">Arrow</string>
    <string name="asset_statements">[{ \"include\": \"https://aippy.ai/.well-known/assetlinks.json\" },{ \"include\": \"https://aippy.onelink.me/.well-known/assetlinks.json\" }]</string>
    <string name="audio_duration_default">0:00</string>
    <string name="audio_too_large">Audio file is too large (max 10MB)</string>
    <string name="avatar_upload_success">Avatar updated successfully</string>
    <string name="back">Back</string>
    <string name="banner_adapter_null_error">Adapter is NULL!</string>
    <string name="base_network_not_good">Bad network</string>
    <string name="base_text_empty">No data!</string>
    <string name="base_text_retry">Something went wrong!\n\nTap to retry.</string>
    <string name="bio">Bio</string>
    <string name="bio_char_count_default">0/120</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brand_aippy">aippy.ai</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="build_error_desc">We ran into an issue during the build.\nMake sure everything looks right and try again.</string>
    <string name="build_error_title">Something Didn\'t Go as Planned</string>
    <string name="build_what_you_feel">Build What You Feel.</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_back">Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_continue">Continue</string>
    <string name="button_continue_default">Continue</string>
    <string name="button_done_default">Done(%1$d/%2$d)</string>
    <string name="button_follow">Follow</string>
    <string name="button_following">Following</string>
    <string name="button_mutual">Mutual</string>
    <string name="button_ok">OK</string>
    <string name="button_original">Original</string>
    <string name="button_preview">Preview</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_sure">Sure(%1$d)</string>
    <string name="button_sure_default">Sure</string>
    <string name="button_unfollow">Unfollow</string>
    <string name="button_verify_and_sign_in">Verify and Sign In</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="camera">Camera</string>
    <string name="camera_temp_file_error_easy_photos">Picture error</string>
    <string name="cancel">Cancel</string>
    <string name="character_count">%1$d/%2$d</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chat">Chat</string>
    <string name="chip_text">Chip text</string>
    <string name="clear">Clear</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">8eb8a0b0ca5e44c493e2da9651c8b4cf</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="email_hint">name@example.com</string>
    <string name="email_label">Email</string>
    <string name="email_login_no_account">Don\'t have an account?</string>
    <string name="email_login_title">Continue with Email</string>
    <string name="enable_photos_access">Enable Photos Access</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="limited_photos_access">Limited Photos Access</string>
    <string name="load_more_complete">Pull to load more</string>
    <string name="load_more_end">No more content</string>
    <string name="load_more_fail">Load failed. Tap to retry</string>
    <string name="load_more_loading">Loading…</string>
    <string name="notification_banner_button">Turn on</string>
    <string name="notification_banner_subtitle">To get updates from friends</string>
    <string name="notification_banner_title">Turn on notifications</string>
    <string name="open_settings">Open Settings</string>
    <string name="password_hint">Password</string>
    <string name="password_label">Password</string>
    <string name="photo_album">Photo album</string>
    <string name="photos_access_description">Add photos to your Aippy or use screenshots to reproduce a specific style</string>
    <string name="recents">Recents</string>
    <string name="reset_password_description">Enter your email address and we\'ll send you a link to reset your password.</string>
    <string name="reset_password_send">Send Reset Link</string>
    <string name="reset_password_title">Reset your password</string>
    <string name="select">Select</string>
    <string name="select_more_photos">Select more photos to view here</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
</resources>