<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/load_more_loading_view"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/load_more_progress"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:indeterminate="true"
            android:layout_marginEnd="12dp"
            android:indeterminateTint="@color/colorAccent"
            style="?android:attr/progressBarStyleSmall"/>
        <TextView
            android:textSize="13sp"
            android:textColor="@color/base_color_white"
            android:id="@+id/load_more_loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_more_loading"/>
    </LinearLayout>
    <TextView
        android:textSize="13sp"
        android:textColor="@color/base_color_white"
        android:gravity="center"
        android:id="@+id/load_more_load_fail_view"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_more_fail"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"/>
    <TextView
        android:textSize="13sp"
        android:textColor="@color/base_color_white"
        android:gravity="center"
        android:id="@+id/load_more_load_end_view"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_more_end"/>
    <TextView
        android:textSize="13sp"
        android:textColor="@color/base_color_white"
        android:gravity="center"
        android:id="@+id/load_more_load_complete_view"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/load_more_complete"/>
</LinearLayout>
