<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:tag="layout/dialog_edit_avatar_0"
    android:paddingTop="7dp"
    android:paddingBottom="32dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="7dp"
    android:paddingEnd="7dp">
    <androidx.appcompat.widget.AppCompatButton
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:id="@+id/btn_photo_album"
        android:background="@drawable/bg_button_bottom_option_top"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="1dp"
        android:text="@string/photo_album"
        android:textAllCaps="false"/>
    <androidx.appcompat.widget.AppCompatButton
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:id="@+id/btn_camera"
        android:background="@drawable/bg_button_bottom_option_bottom"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/camera"
        android:textAllCaps="false"/>
    <androidx.appcompat.widget.AppCompatButton
        android:textSize="16sp"
        android:textColor="#ff6b6b"
        android:id="@+id/btn_cancel"
        android:background="@drawable/bg_button_bottom_cancel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        android:textAllCaps="false"/>
</LinearLayout>
