<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/item_notification_banner_0"
    android:background="@drawable/bg_notification_banner"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:paddingStart="12dp"
    android:paddingEnd="10dp">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_bell"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_notification_bell"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_turn_on"
        app:layout_constraintStart_toEndOf="@+id/img_bell"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_banner_title"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="12sp"
            android:textColor="#8d9a87"
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/notification_banner_subtitle"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/btn_turn_on"
        android:background="@drawable/bg_button_notification"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:text="@string/notification_banner_button"
        android:textAllCaps="false"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
